Use cmake glob recurse instead of explicit sources

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ function(compile_shaders TARGET_NAME SHADER_PATH)
         get_filename_component(FILE_NAME ${GLSL} NAME)
         set(SPIRV "${SHADER_PATH}/${FILE_NAME}.spv")
         message(STATUS ${GLSL})
+        message(STATUS "")
         add_custom_command(
             OUTPUT ${SPIRV}
             COMMAND ${GLSL_VALIDATOR} -V ${GLSL} -o ${SPIRV}
