--- a/lib/goose/CMakeLists.txt
+++ b/lib/goose/CMakeLists.txt
@@ -5,19 +5,22 @@ file(GLOB_RECURSE HEADERS *.h)
 
 add_library(${TARGET_NAME} STATIC
     ${SOURCES}
+    ${HEADERS}
 )
 
 target_include_directories(${TARGET_NAME} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/..")
 
 set_property(TARGET ${TARGET_NAME} PROPERTY CXX_STANDARD 20)
 
-target_link_libraries(${TARGET_NAME} PRIVATE
-    fmt::fmt
-    glm
-    imgui
-    SDL3::SDL3
-    stb_image
-    vma
+target_link_libraries(${TARGET_NAME}
+    PRIVATE
+        Vulkan::Vulkan
+        stb_image
+        vma
+
+    PUBLIC
+        fmt::fmt
+        glm
 )
 
 
@@ -26,4 +29,4 @@ target_link_libraries(${TARGET_NAME} PRIVATE
 # DEFINES #
 ###########
 
-target_compile_definitions(${TARGET_NAME} PRIVATE GLM_FORCE_DEPTH_ZERO_TO_ONE)
+target_compile_definitions(${TARGET_NAME} PUBLIC GLM_FORCE_DEPTH_ZERO_TO_ONE)
