--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,13 @@ function(compile_shaders TARGET_NAME SHADER_PATH)
     add_dependencies(${TARGET_NAME} ${TARGET_NAME}-shaders)
 endfunction()
 
+function(copy_runtime_dlls TARGET_NAME)
+    add_custom_command(TARGET ${TARGET_NAME} POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:${TARGET_NAME}> $<TARGET_FILE_DIR:${TARGET_NAME}>
+        COMMAND_EXPAND_LISTS
+    )
+endfunction()
+
 
 
 ###########
