Simplify lib API

--- a/lib/goose/CMakeLists.txt
+++ b/lib/goose/CMakeLists.txt
@@ -23,8 +23,8 @@ target_link_libraries(${TARGET_NAME}
         Vulkan::Vulkan
         stb_image
         vma
-
-    PUBLIC
+        SDL3::SDL3
+        imgui
         fmt::fmt
         glm
 )
